--- a/_posts/2021-08-17-services-1.markdown
+++ b/_posts/2021-08-17-services-1.markdown
@@ -5,4 +5,4 @@ category: Services
 title: Software Design
 description: |
 ---
-We specialize in DSP implementation on DSPs.
+We specialize in DSP implementation on FPGAs.
