Modified fw sw wording

--- a/_posts/2021-08-17-services-1.markdown
+++ b/_posts/2021-08-17-services-1.markdown
@@ -5,4 +5,4 @@ category: Services
 title: Embedded Firmware and Software Design
 description: |
 ---
-Need an Field Programmable Gate Array (FPGA) to perform Digital Signal Processing (DSP)? Need a microcontroller to manage a system for optimized low power consumption? We have you covered. We pride ourselves with our extensive experience with FPGAs and microcontrollers.
+Need an Field Programmable Gate Array (FPGA) to perform Digital Signal Processing (DSP)? Need a microcontroller to manage a system for optimized low power consumption? We have you covered. Our engineers have extensive experience with FPGAs and microcontrollers.
